# MensaUniurbBot

./: .env-dist  .env-example  .flake8  .gitignore  MensaUniurbBot.py  MensaUniurb_Bot.py  Procfile  README.md  database_connector.py  docker-compose.yml  init_db.py  init_language.sh  makefile  messages.py  requirements.txt  settings_dist.py
api/: .dockerignore  Dockerfile  README.md  api.py  mensa_api.py  pyproject.toml  requirements.txt  utils.py
bot/: .dockerignore  Dockerfile  bot-old.py  bot.py  pyproject.toml  requirements.txt  utils.py
doc/src/: user_states.xml
locales/en_US/LC_MESSAGES/: messages.mo  messages.po
locales/it_IT/LC_MESSAGES/: messages.mo  messages.po
mensa_uniurb_api/: api.py  docker-compose.yml  logger.py  requirements.txt
mensa_uniurb_app/: .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
mensa_uniurb_app/android/: build.gradle  gradle.properties
mensa_uniurb_app/android/app/: build.gradle
mensa_uniurb_app/android/app/src/debug/: AndroidManifest.xml
mensa_uniurb_app/android/app/src/main/: AndroidManifest.xml
mensa_uniurb_app/android/app/src/main/java/com/example/mensa_uniurb_app/: MainActivity.java
mensa_uniurb_app/android/app/src/main/java/com/radeox/mensa_uniurb/: MainActivity.java
mensa_uniurb_app/android/app/src/profile/: AndroidManifest.xml
mensa_uniurb_app/android/gradle/wrapper/: gradle-wrapper.properties
mensa_uniurb_app/ios/Runner/: Info.plist
mensa_uniurb_app/ios/Runner.xcodeproj/: project.pbxproj
mensa_uniurb_app/lib/: ads.dart  distConfig.dart  main.dart  myWidgets.dart  resultScreen.dart  themes.dart
mensa_uniurb_app/test/: widget_test.dart
mensa_uniurb_bot/: .env-dist  Dockerfile  MensaUniurbBot.py  bot.py  db_manager.py  docker-compose.yml  mensa_bot.py  requirements.txt  settings_dist.py
