[tool.poetry]
name = "mensa-uniurb-api"
version = "1.0.0"
description = ""
authors = ["Dawid Weglarz <dawid.weglarz95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
waitress = "^2.1.2"
beautifulsoup4 = "^4.11.1"
flask-restful = "^0.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
