[tool.poetry]
name = "mensa-uniurb-api"
version = "1.0.0"
description = ""
authors = ["Dawid Weglarz <dawid.weglarz95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
beautifulsoup4 = "^4.12.2"
flask-restful = "^0.3.9"
requests = "^2.31.0"
waitress = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
